--- a/src/global.css
+++ b/src/global.css
@@ -19,7 +19,7 @@ a {
 }
 
 p {
-    font-size: 2em;
+    font-size: 2vw;
     font-family: 'League Gothic';
     color: hsla(0, 100%, 100%, 1);
 }
@@ -30,25 +30,34 @@ button {
 }
 
 h1 {
-    font-size: 6em;
+    font-size: 6vw;
 }
 
 h2 {
-    font-size: 5em;
+    font-size: 5vw;
 }
 
 h3 {
-    font-size: 4em;
+    font-size: 4vw;
 }
 
 h4 {
-    font-size: 3em;
+    font-size: 3vw;
 }
 
 h5 {
-    font-size: 2em;
+    font-size: 2vw;
 }
 
 h6 {
-    font-size: 1em;
+    font-size: 1vw;
 }
+
+@media only screen and (max-width: 820px) {
+    main {
+        height: auto;
+    }
+    .column {
+      flex-direction: column;
+    }
+  }
