--- a/src/global.css
+++ b/src/global.css
@@ -29,6 +29,10 @@ button {
     cursor: pointer;
 }
 
+sup {
+    font-family: 'League Gothic';
+}
+
 h1 {
     font-size: 6vw;
 }
@@ -55,9 +59,15 @@ h6 {
 
 @media only screen and (max-width: 820px) {
     main {
-        height: auto;
+        height: auto !important;
     }
-    .column {
+    .column, .row {
       flex-direction: column;
+    }
+    p, h5 {
+        font-size: 8vw;
+    }
+    h1 {
+        font-size: 10vw;
     }
   }
