--- a/src/global.css
+++ b/src/global.css
@@ -64,8 +64,8 @@ h6 {
     .column, .row {
       flex-direction: column;
     }
-    p, h5 {
-        font-size: 8vw;
+    p, h5, .button-holder button {
+        font-size: 6vw !important;
     }
     h1 {
         font-size: 10vw;
