--- a/src/global.css
+++ b/src/global.css
@@ -34,19 +34,19 @@ sup {
 }
 
 h1 {
-    font-size: 6vw;
-}
-
-h2 {
-    font-size: 5vw;
-}
-
-h3 {
     font-size: 4vw;
 }
 
-h4 {
+h2 {
+    font-size: 3.5vw;
+}
+
+h3 {
     font-size: 3vw;
+}
+
+h4 {
+    font-size: 2.5vw;
 }
 
 h5 {
@@ -54,7 +54,7 @@ h5 {
 }
 
 h6 {
-    font-size: 1vw;
+    font-size: 1.5vw;
 }
 
 @media only screen and (max-width: 820px) {
@@ -69,5 +69,8 @@ h6 {
     }
     h1 {
         font-size: 10vw;
+    }
+    .brand img {
+        height: 6vw !important;
     }
   }
